add domain entities

--- a/uFeed.DAL/uFeed.DAL.csproj
+++ b/uFeed.DAL/uFeed.DAL.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,8 +41,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Attach\Album.cs" />
+    <Compile Include="Entities\Attach\Attachment.cs" />
+    <Compile Include="Entities\Attach\Document.cs" />
+    <Compile Include="Entities\Attach\Likes.cs" />
+    <Compile Include="Entities\Attach\Link.cs" />
+    <Compile Include="Entities\Attach\Poll.cs" />
+    <Compile Include="Entities\Attach\PollAnswer.cs" />
+    <Compile Include="Entities\Attach\Video.cs" />
+    <Compile Include="Entities\Enums\Socials.cs" />
+    <Compile Include="Entities\Social\Author.cs" />
+    <Compile Include="Entities\Category.cs" />
+    <Compile Include="Entities\ClientProfile.cs" />
+    <Compile Include="Entities\Social\Photo.cs" />
+    <Compile Include="Entities\Social\Post.cs" />
+    <Compile Include="Entities\Social\UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
