--- a/uFeed.BLL/uFeed.BLL.csproj
+++ b/uFeed.BLL/uFeed.BLL.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Interfaces\IClientProfileService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ClientProfileService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
