--- a/uFeed.Entities/uFeed.Entities.csproj
+++ b/uFeed.Entities/uFeed.Entities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DB273D72-6262-4763-A660-AA3482D23E60}</ProjectGuid>
+    <ProjectGuid>{FC24E123-C79F-45B8-82CC-E2F15EDED34A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>uFeed.DAL</RootNamespace>
-    <AssemblyName>uFeed.DAL</AssemblyName>
+    <RootNamespace>uFeed.Entities</RootNamespace>
+    <AssemblyName>uFeed.Entities</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,14 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -49,23 +41,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EF\UFeedContext.cs" />
-    <Compile Include="EF\UFeedDbInitializer.cs" />
-    <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="BaseType.cs" />
+    <Compile Include="Category.cs" />
+    <Compile Include="ClientProfile.cs" />
+    <Compile Include="Enums\Socials.cs" />
+    <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CommonRepository.cs" />
-    <Compile Include="UnitOfWorks\UFeedUnitOfWork.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\uFeed.Entities\uFeed.Entities.csproj">
-      <Project>{FC24E123-C79F-45B8-82CC-E2F15EDED34A}</Project>
-      <Name>uFeed.Entities</Name>
-    </ProjectReference>
+    <Compile Include="SocialAuthor.cs" />
+    <Compile Include="Social\Attach\Album.cs" />
+    <Compile Include="Social\Attach\Attachment.cs" />
+    <Compile Include="Social\Attach\Document.cs" />
+    <Compile Include="Social\Attach\Likes.cs" />
+    <Compile Include="Social\Attach\Link.cs" />
+    <Compile Include="Social\Attach\Poll.cs" />
+    <Compile Include="Social\Attach\PollAnswer.cs" />
+    <Compile Include="Social\Attach\Video.cs" />
+    <Compile Include="Social\Author.cs" />
+    <Compile Include="Social\Photo.cs" />
+    <Compile Include="Social\Post.cs" />
+    <Compile Include="Social\UserInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
