--- a/uFeed.DAL.SocialService/uFeed.DAL.SocialService.csproj
+++ b/uFeed.DAL.SocialService/uFeed.DAL.SocialService.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,13 +66,14 @@
     <Compile Include="Models\FacebookModel\Likes\SerializedLikes.cs" />
     <Compile Include="Models\FacebookModel\User\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Facebook\Api.cs" />
+    <Compile Include="Services\Facebook\FacebookException.cs" />
+    <Compile Include="Services\Facebook\Request.cs" />
+    <Compile Include="UnitOfWorks\SocialUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\FacebookModel\" />
     <Folder Include="Models\VkModel\" />
-    <Folder Include="Services\Facebook\" />
     <Folder Include="Services\Vk\" />
-    <Folder Include="UnitOfWorks\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\uFeed.Entities\uFeed.Entities.csproj">
