--- a/uFeed.WEB/uFeed.WEB.csproj
+++ b/uFeed.WEB/uFeed.WEB.csproj
@@ -53,6 +53,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.2.0.0\lib\net45-full\Ninject.dll</HintPath>
       <Private>True</Private>
@@ -95,9 +99,6 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http">
     </Reference>
@@ -268,8 +269,11 @@
     <Compile Include="ViewModels\Social\Attach\PollViewModel.cs" />
     <Compile Include="ViewModels\Social\Attach\VideoViewModel.cs" />
     <Compile Include="ViewModels\Social\AuthorViewModel.cs" />
+    <Compile Include="ViewModels\Social\Login\FacebookLoginViewModel.cs" />
+    <Compile Include="ViewModels\Social\Login\VkLoginViewModel.cs" />
     <Compile Include="ViewModels\Social\PhotoViewModel.cs" />
     <Compile Include="ViewModels\Social\PostViewModel.cs" />
+    <Compile Include="ViewModels\Social\Login\SocialLoginViewModel.cs" />
     <Compile Include="ViewModels\Social\UserInfoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
