configure deployment to the azure (no password in connection string)

--- a/uFeed.WEB/Web.config
+++ b/uFeed.WEB/Web.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="uFeedContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\uFeedDb.mdf;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="AuthContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AuthDb.mdf;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <!--<add name="uFeedContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\uFeedDb.mdf;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+    <!--<add name="AuthContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AuthDb.mdf;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+    <add name="RemoteContext" connectionString="Server=tcp:ufeed.database.windows.net,1433;Initial Catalog=uFeedDb;Persist Security Info=False;User ID=serhii.iordanov;Password={password_here};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
