--- a/uFeed.DAL/uFeed.DAL.csproj
+++ b/uFeed.DAL/uFeed.DAL.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ClientProfileRepository.cs" />
     <Compile Include="Repositories\CommonRepository.cs" />
     <Compile Include="UnitOfWorks\UFeedUnitOfWork.cs" />
   </ItemGroup>
