--- a/uFeed.WEB/Web.config
+++ b/uFeed.WEB/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="uFeedContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\uFeedDb.mdf;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
     <!--<add name="AuthContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AuthDb.mdf;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
-    <add name="RemoteContext" connectionString="Server=tcp:ufeed.database.windows.net,1433;Initial Catalog=uFeedDb;Persist Security Info=False;User ID=serhii.iordanov;Password={password_here};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="RemoteContext" connectionString="Server=tcp:ufeed.database.windows.net,1433;Initial Catalog=uFeedDb;Persist Security Info=False;User ID=serhii.iordanov;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
