--- a/uFeed.WEB/Web.config
+++ b/uFeed.WEB/Web.config
@@ -22,6 +22,7 @@
   </system.web>
   <system.webServer>
     <modules>
+      <add name="AuthHttpModule" type="uFeed.WEB.Modules.AuthHttpModule" />
       <remove name="FormsAuthentication" />
     </modules>
     <handlers>
